--- a/css/schedule.css
+++ b/css/schedule.css
@@ -119,15 +119,8 @@ body {
   position: absolute;
   padding: 0 0.5rem;
   padding-bottom: 2px;
-<<<<<<< HEAD
-  transition: opacity 0.4s ease-in; 
-  perspective: 1000;
-=======
   transition: opacity 0.4s ease-in;
-  
- 
 
->>>>>>> 85f02e5e6c31cf3748f4228ad8738427a518a930
 }
 #event .item .conference {
   width: 20px;
@@ -162,10 +155,6 @@ body {
   transition: transform 0.15s ease-out, background-color 0.4s ease-in;
   /*position: relative;*/
 
-<<<<<<< HEAD
- 
-=======
->>>>>>> 85f02e5e6c31cf3748f4228ad8738427a518a930
 
 }
 #event .item:hover .content  {
@@ -173,15 +162,7 @@ body {
 }
 
 #event .item .content-hidden {
-<<<<<<< HEAD
-  /*font-size: 0.8em;
-  background-color: rebeccapurple;
-  color: white;
-  height: inherit;
-  position: absolute;
-  width: 95%;
-  padding: 1em;
-  border-radius: 10px;*/
+
   font-weight: 400;
   height: 100%;
   border-radius: 0.5rem;
@@ -200,15 +181,7 @@ body {
 .content-hidden p {
   margin-bottom: 0.2em;
 }
-=======
-  display: none;
 
-}
-
-
-
-
->>>>>>> 85f02e5e6c31cf3748f4228ad8738427a518a930
 #event .item.partner .content {
   background-color: #394861;
 }
@@ -274,4 +247,5 @@ body {
   top: 8rem;
   left: 0;
   right: 17px;
+  min-width: 100%;
 }
