--- a/css/schedule.css
+++ b/css/schedule.css
@@ -258,7 +258,7 @@ body {
     top: 9rem;
     width: 40rem;
     background-color: #ffd2d2;
-    babckground-color: #e2b405;
+    background-color: #e2b405;
     padding: 1rem;
     z-index: 9999;
     font-weight: 400;
