--- a/css/schedule.css
+++ b/css/schedule.css
@@ -283,11 +283,21 @@ body {
   font-size: 0.875rem;
   margin-left: 2rem;
 }
+#schedule-header #refresh {
+  color: lime;
+  font-size: 0.875rem;
+  margin-left: 2rem;
+}
 #schedule-header #conflict-trigger i {
   margin-right: 0.2rem;
   color: #e2b404;
   font-size: inherit;
 }
-#conflict-trigger {
+#schedule-header #refresh i {
+  margin-right: 0.2rem;
+  color: lime;
+  font-size: inherit;
+}
+#conflict-trigger, #refresh {
   cursor: pointer;
 }
