--- a/css/schedule.css
+++ b/css/schedule.css
@@ -102,7 +102,8 @@ body {
    padding-left: 0.5rem;
     font-weight: 300;
     font-size: 0.875rem;
-    border-bottom: 1px solid #efeeee;
+    // border-bottom: 1px solid #efeeee;
+    border-top: 1px solid #efeeee;
 }
 #grid .hours:first-child {
   /*border-top: 1px solid #efeeee;*/
