--- a/DirectionsEMEA_v1/style.css
+++ b/DirectionsEMEA_v1/style.css
@@ -37,12 +37,14 @@
 		bottom: 0px; */
 		padding: 1em;
 		display: inline-block;
+		max-width: 830px;
 	}
 
 	#selectedSessions ul li {
 		float: left;
 		width: 150px;
 		padding: 0.5em;
+		margin: 0.5em;
 		list-style-type: none;
 		border: 1px solid black;
 		text-align: center;
